@@ -848,6 +848,9 @@ Release 2.8.0 - UNRELEASED
     YARN-4078. Add getPendingResourceRequestForAttempt in YarnScheduler interface.
     (Naganarasimha G R via jianhe)
 
+    YARN-4135. Improve the assertion message in MockRM while failing after waiting for the state.
+    (Nijel S F via rohithsharmaks)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
